<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_insights"
        android:title="@string/menu_stats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pause"
        android:title="@string/menu_pause"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resume"
        android:title="@string/menu_resume"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_archive"
        android:title="@string/menu_archive_goal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:title="@string/archive_restore"
        app:showAsAction="never" />
</menu>
