<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_gutter"
    android:paddingEnd="@dimen/screen_gutter">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginBottom="@dimen/space_l"
        android:accessibilityHeading="true"
        android:text="@string/editor_step_details"
        android:textAppearance="?attr/textAppearanceHeadlineSmall" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editor_title_label"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        app:placeholderText="@string/editor_title_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLength="80" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_m"
        android:hint="@string/editor_description_label"
        app:counterEnabled="true"
        app:counterMaxLength="280">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="300"
            android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/Widget.WinterArc.SectionTitle"
        android:text="@string/editor_icon" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true" />

    <TextView
        style="@style/Widget.WinterArc.SectionTitle"
        android:text="@string/editor_color" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true" />
</LinearLayout>
